@@ -1,3 +1,7 @@
+2005-12-15  Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* VOEvent.pm: Moved to XML::Simple for parsing.
+	
 2005-07-27  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * VOEvent.pm: Support for "simple" positions, synced with RAPTOR
